# cockroach

./: .bazelignore  DEPS.bzl  LICENSE  Makefile  README.md  go.mod  go.sum
c-deps/libroach/: chunked_buffer.cc  iterator.h  mvcc.h
ideabak/: codestream.xml  dataSources.local.xml  dataSources.xml  dbnavigator.xml  deployment.xml  misc.xml  sshConfigs.xml  tools.protobuf.xml  vcs.xml  watcherTasks.xml  webServers.xml  workspace.xml
ideabak/dataSources/: 315cef91-fe08-4f13-a083-faae78f37381.corrupted.20181219-025023.xml  315cef91-fe08-4f13-a083-faae78f37381.xml  5962c7eb-31d4-4c23-9c49-1db2a118b536.xml
ideabak/inspectionProfiles/: Project_Default.xml
ideabak/jsLinters/: jshint.xml
pkg/: BUILD.bazel
pkg/cli/: cli.go  node.go  sql.go  sql_util.go  sql_util_test.go  user.go  zip.go  zone.go
pkg/jobs/: helpers.go  registry.go
pkg/kv/: txn_coord_sender.go
pkg/roachpb/: api.go  api.pb.go  api.proto  app_stats.go
pkg/server/: BUILD.bazel  env_sampler.go  server.go
pkg/sql/: BUILD.bazel  analyze.go  backfill.go  check.go  conn_executor.go  conn_executor_exec.go  conn_executor_prepare.go  conn_fsm.go  crdb_internal.go  create_index.go  delete.go  descriptor.go  descriptor_mutation_test.go  distinct.go  distsql_exec_builder.go  distsql_physical_planner.go  distsql_running.go  distsql_wrapper.go  executor.go  expand_plan.go  explain_distsql.go  index_selection.go  lease.go  (+20 more)
pkg/util/encoding/encoding2/: BUILD.bazel  encoding.go  encoding_test.go
pkg/util/vector/: BUILD.bazel  kmeans.go  vector.go
pkg/util/vector/vectorpb/: BUILD.bazel  config.go  config.proto
(+223 files in other folders)
